--- a/CSS-Personal-Site/index.html
+++ b/CSS-Personal-Site/index.html
@@ -48,9 +48,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/hamzabinzia/">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/hamzazia/">GitHub</a>
+      <a class="footer-link" href="https://hamzabinzia.com/">Website</a>
       <p>© 2022 Hamza.</p>
     </div>
 
